Fix typos in README.

--- a/README
+++ b/README
@@ -3,11 +3,10 @@ That's How I Roll Dice
 -- a dice rolling application for roleplaying nerds
 
 Have you ever been irritated by rolling dice and having them fall off the
-table?  under something?  Ever sighed when you have to ask your buddies for the
-twentieth time "Has anyone got another d12"?  Then third may be the app for
-you.  third packs all the random-number-generating punch of dice, without the
-issues that come with having to carry around and physically hurl regular
-polyhedra.
+table?  Ever sighed when you have to ask your buddies for the twentieth time
+"has anyone got another d12"?  Then third may be the app for you.  third packs
+all the random-number-generating punch of dice, without the issues that come
+with having to carry around and physically hurl regular polyhedra.
 
 third allows you to roll up pretty much any configuration of the standard
 roleplaying dice sets, as well as add modifiers and custom dice sizes.  If you
