--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ThirdActivity</string>
-	<string name="hello"></string>
+    <string name="app_name">Third</string>
 </resources>
