Add a config description label and roll/reset buttons to the layout.
The reset button is fully functional but the label and roll button don't
do anything as yet.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Third</string>
+    <string name="reset">Reset</string>
+    <string name="roll">Roll</string>
+    <string name="empty_config">Set up your roll</string>
 </resources>
