Make space for the presets list by flipping out the results log.
The ViewFlipper is controlled by a pair of radio buttons.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="reset">Reset</string>
     <string name="roll">Roll</string>
     <string name="empty_config">Set up your roll</string>
+    <string name="presets">Presets</string>
+    <string name="results">Results</string>
 </resources>
