Add a sqlite database to store profiles and presets.
Also add a Spinner widget to select the current profile.

There is no support for adding or modifying profiles and presets as yet.
The sqlite database is initialised with one preset named 'Default' and
that's it.  Creation and modification will probably be via Options Menus
and Context Menus.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="empty_config">Set up your roll</string>
     <string name="presets">Presets</string>
     <string name="results">Results</string>
+    <string name="profiles">Profiles</string>
+    <string name="add_profile">Add profile</string>
+    <string name="rename_profile">Rename profile</string>
 </resources>
