Add the ability to add new presets.
This is done by setting up the configuration you would like to save and
then using the "Add preset" option from the Menu.

Next on the list is renaming and removing presets, which I expect to
implement as long clicks on the preset itself rather than as menu items.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="profiles">Profiles</string>
     <string name="add_profile">Add profile</string>
     <string name="rename_profile">Rename profile</string>
+    <string name="add_preset">Add preset</string>
+    <string name="name_preset">Enter a name for the following configuration:</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
