--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="add_profile">Add profile</string>
     <string name="rename_profile">Rename profile</string>
     <string name="add_preset">Add preset</string>
+    <string name="rename_preset">Rename preset</string>
+    <string name="update_preset">Update preset</string>
+    <string name="del_preset">Delete preset</string>
     <string name="name_preset">Enter a name for the following configuration:</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
