Add more padding between major layout elements.
Previously the layout was a bit cramped, needed some whitespace.

Also, add a label to the range display to make it more clear what it is
showing.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="app_name">Third</string>
     <string name="reset">Reset</string>
     <string name="roll">Roll</string>
+    <string name="range">Range:</string>
     <string name="empty_config">Set up your roll</string>
     <string name="presets">Presets</string>
     <string name="results">Results</string>
