--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -11,7 +11,7 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <resources>
-    <string name="app_name">Third</string>
+    <string name="app_name">THIRD</string>
     <string name="reset">Reset</string>
     <string name="roll">Roll</string>
     <string name="range">Range:</string>
