--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="del_preset">Delete preset</string>
     <string name="name_profile">Enter a name for the profile:</string>
     <string name="name_preset">Enter a name for this configuration:</string>
+    <string name="name_preset_hint">Preset name</string>
+    <string name="name_profile_hint">Profile name</string>
     <string name="confirm_del_profile">Deleting a profile will also delete all its presets.  Are you sure you want to delete this profile?</string>
     <string name="ok">OK</string>
     <string name="delete">Delete</string>
