--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="del_profile">Delete profile</string>
     <string name="add_preset">Add preset</string>
     <string name="rename_preset">Rename preset</string>
-    <string name="update_preset">Update preset</string>
+    <string name="update_preset">Update preset to current roll</string>
     <string name="add_preset_inc">Use in new preset</string>
     <string name="add_inc">Include other preset</string>
     <string name="add_inc_msg">Select a preset to include</string>
