Move "OK" buttons to the right-hand side.
Per Android UI guidelines, affirmative actions should appear on the
right of a button group.

Also, relabel the reset button as "Clear", I believe this is more
intuitive.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -12,7 +12,7 @@
     -->
 <resources>
     <string name="app_name">THIRD</string>
-    <string name="reset">Reset</string>
+    <string name="reset">Clear</string>
     <string name="roll">Roll</string>
     <string name="range">Range:</string>
     <string name="empty_config">Set up your roll</string>
