--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="presets">Presets</string>
     <string name="results">Results</string>
     <string name="profiles">Profiles</string>
+    <string name="default_profile_name">Default</string>
     <string name="add_profile">Add profile</string>
     <string name="rename_profile">Rename profile</string>
     <string name="del_profile">Delete profile</string>
@@ -33,8 +34,10 @@
     <string name="name_preset">Enter a name for this configuration:</string>
     <string name="name_preset_hint">Preset name</string>
     <string name="name_profile_hint">Profile name</string>
-    <string name="confirm_del_profile">Deleting a profile will also delete all its presets.  Are you sure you want to delete this profile?</string>
     <string name="ok">OK</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
+    <string name="confirm_del_profile">Deleting a profile will also delete all its presets.  Are you sure you want to delete this profile?</string>
+    <string name="error_del_last_profile">You may not delete the only profile.</string>
+    <string name="error_empty_name">Name may not be blank.</string>
 </resources>
