--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="ok">OK</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
-    <string name="confirm_del_profile">Deleting a profile will also delete all its presets.  Are you sure you want to delete this profile?</string>
+    <string name="confirm_del_profile">Deleting a profile will also delete all its presets.  Are you sure you want to delete profile “%s”?</string>
     <string name="error_del_last_profile">You may not delete the only profile.</string>
     <string name="error_empty_name">Name may not be blank.</string>
 </resources>
