Require confirmation before deleting an included preset.
Also, when deleting a preset, go through existing presets and remove any
inclusions that point to the deleted preset.  This will happen in the
fullness of time anyway, as saving and reloading the profiles will
discard any include references that do not point to a valid preset, but
it's better all round to do it immediately.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="confirm_del_profile">Deleting a profile will also delete all its presets.  Are you sure you want to delete profile “%s”?</string>
+    <string name="confirm_del_preset">Deleting a preset will remove it from all other presets that include it.  Are you sure you want to delete preset “%s”?</string>
     <string name="error_del_last_profile">You may not delete the only profile.</string>
     <string name="error_empty_name">Name may not be blank.</string>
     <string name="success_update_preset">“%1$s” has been updated to %2$s.</string>
